# study-dezero

./: .gitignore  README.md  README.rst  pyproject.toml
dezero/: __init__.py  core.py  core_simple.py  cuda.py  dataloaders.py  datasets.py  functions.py  functions_conv.py  layers.py  models.py  optimizers.py  transforms.py  utils.py
steps/: step01.py  step02.py  step03.py  step04.py  step06.py  step07.py  step08.py  step09.py  step10.py  step11.py  step12.py  step13.py  step14.py  step16.py  step17.py  step18.py  step19.py  step20.py  step21.py  step22.py  step23.py  step24.py  step26.py  step27.py  step28.py  step29.py  step33.py  step34.py  step35.py  step36.py  step37.py  step38.py  step39.py  step40.py  step41.py  step42.py  step43.py  step44.py  step45.py  step46.py  (+13 more)
tests/: test_dezero.py
