[tool.poetry]
name = "study-dezero"
version = "0.1.0"
description = ""
authors = ["Catminusminus <getomya@svk.jp>"]
readme = "README.md"
packages = [{include = "study_dezero"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
matplotlib = "^3.6.1"
pillow = "^9.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
